<resources>
    <string name="app_name">Check Point</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_later">LOG IN LATER</string>
    <string name="title_signup_popup">Sign up for CheckPoint</string>
    <string name="hint_name_et_sign_up_popup">Name</string>
    <string name="hint_mob_et_sign_up_popup">Mobile No</string>
    <string name="hint_birth_date_et_sign_up_popup">Date of Birth</string>
    <string name="hint_address_et_sign_up_popup">Address</string>
    <string name="hint_password_et_sign_up_popup">Password</string>
    <string name="tv_continue_with">Or</string>
    <string name="btn_facebook" translatable="false">Facebook</string>
    <string name="btn_confirm_sign_up_popup">Confirm</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="chose_language">Chose language</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_arabic" translatable="false">العربية</string>

    <string name="toast_note_field_empty">Please don\'t let any fields empty</string>
    <string name="gender_no_selection">Gender</string>
    <string name="invalid_gender_signup">Please select your gender</string>
    <string name="invalid_mobnum_signup">Invalid mobile number</string>
    <string name="title_login_popup">Log in for Check Point</string>
    <string name="btn_login_login_popup">Log in</string>
    <string name="toast_empty_password_login_popup">Please enter your password</string>
    <string name="category_space" translatable="false"></string>
    <string name="category_dots_space" translatable="false">.........................................................................................</string>
    <string name="btn_cold_drinks">Cold Drinks</string>
    <string name="btn_deserts">Deserts</string>
    <string name="btn_your_list">Your List</string>
    <string name="zero_counter_your_list" translatable="false">0</string>
    <string name="popup_tittle_set_amount">Set Amount</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="toast_exceeded_maximum_allowed_quantity">Exceeded the maximum allowed quantity (10)</string>
    <string name="title_your_list_activity">Your List</string>
    <string name="title_total_price">Total Price</string>
    <string name="unit_egypt">L.E</string>

    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="languages_array">
        <item>Chose languag</item>
        <item>English</item>
        <item>العربية</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_language">Language</string>
    <string name="btn_hot_drinks">Hot Drinks</string>
    <string name="menu_item_about_us">About us</string>
    <string name="title_old_order">Old order</string>
    <string name="title_old_orders">Old Orders</string>
    <string name="title_your_list_order">Your List Order</string>
    <string name="part1_title_timer">Time to</string>
    <string name="part2_title_timer">Get Your Order</string>
    <string name="title_counter">Your order will be ready within</string>

    <string name="facebook_app_id" translatable="false">1574590452610776</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1574590452610776</string>
    <string name="invalid_birth_date">Invalid birth date</string>
    <string name="logout_menue_item">Logout</string>
    <string name="unknown_error">خطأ غير معروف</string>
    <string name="user_is_existed">This mobile number is already existed</string>
    <string name="try_again">Try Again</string>
    <string name="register_now">Register Now</string>
    <string name="mob_num_not_registered">This phone number is not registered</string>
    <string name="tex_no_internet">No Internet Connection</string>
    <string name="item_profile">Profile</string>
    <string name="changes_saved">Changes saved</string>
    <string name="connection_error">Connection error</string>
    <string name="change_the_language">Change the language</string>
    <string name="order">Checkout</string>
    <string name="check_your_connection_or_try_again">Check your connection or try again</string>
    <string name="points">points</string>
    <string name="save_changes">Save</string>
    <string name="signup_to_con">Sign up to continue</string>
    <string name="congr_new_bonus">Congratulations you have added 5 points to your score of 20</string>
    <string name="congratulations_your_order">Congratulations, your order</string>
    <string name="is_being_prepared_now">is being prepared now</string>
    <string name="no_items">Sorry no items for this category yet</string>
    <string name="toast_logged_out">Logged out</string>
    <string name="notifi_title">waiting for you :)</string>
    <string name="notifi_content">You order is ready</string>
    <string name="added_points">Added Points</string>
    <string name="new_score">New Score</string>
    <string name="notes">notes</string>
    <string name="no_notes">no notes</string>
</resources>
