<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    >
    <LinearLayout
        android:id="@+id/btn_hot_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/child_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hot_drinks"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:singleLine="true"
            android:text="@string/category_dots_space"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <Button
            android:id="@+id/btn_plus_to_order"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_plus_to_order"
            />

    </LinearLayout>

</RelativeLayout>