<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:id="@+id/btn_hot_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        >

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hot_drinks"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"

            android:textStyle="bold"
            android:textColor="@color/white"
            android:singleLine="true"
            android:text="@string/category_dots_space"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            app:srcCompat="@drawable/ic_play_arrow_24dp"
            android:layout_gravity="bottom"
            />

    </LinearLayout>

</RelativeLayout>