<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_signup_popup"
        >
    </View>
    <View
        android:layout_width="200dp"
        android:layout_height="229.4dp"
        android:layout_centerInParent="true"
        android:background="@drawable/logo"
        android:alpha="0.1"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >
        <Button
            android:id="@+id/btn_close_login_pop"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/tx_login_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_close_login_pop"
            android:text="@string/title_login_popup"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/et_password_login_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_edite_text"
            android:drawableStart="@drawable/ic_password_et"
            android:drawableLeft="@drawable/ic_password_et"
            android:hint="@string/hint_password_et_sign_up_popup"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btn_login_login_popup"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_password_login_popup"
            android:background="@drawable/shape_btn_confirm"
            android:text="@string/btn_login_login_popup"
            android:textColor="@color/black_op_90"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/btn_confirm_sign_up_popup"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_continue_with"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_facebook_vec"
                android:drawableLeft="@drawable/ic_facebook_vec"
                android:text="@string/btn_facebook"
                android:textAllCaps="false"
                android:textColor="#3b5998"
                />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>