<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/btn_hot_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hot_drinks"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:singleLine="true"
            android:text="@string/category_dots_space"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_space"
            />
        <TextView
            android:id="@+id/tv_desired_quantity"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/shape_tv_total_price"
            android:layout_gravity="center"
            android:text="12"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_remove_item"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_delete_black_24dp"
            />

    </LinearLayout>

</RelativeLayout>