<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_add_to_cart_popup"
    >


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/popup_tittle_set_amount"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/et_quantity_add_to_cart"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edite_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:inputType="number"
        android:maxLength="2"
        />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:layout_below="@id/et_quantity_add_to_cart"
        />

    <EditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/notes"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/shape_edite_text"
        android:textColor="@color/white"
        android:padding="8dp"
        android:gravity="start"
        />

    <LinearLayout
        android:id="@+id/layout_btn_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_notes"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_btn_your_list"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/btn_add_to_cart"
            />
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_cart_symbol"
            />
    </LinearLayout>


</RelativeLayout>